SERVER-56313: Do not use double as map key, it may trigger unexpected behavior